Fixed search form overlapping

--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -944,6 +944,7 @@ input.openid_url {
   -moz-transition:    all 200ms ease-out;
   -o-transition:      all 200ms ease-out;
   transition:         all 200ms ease-out;
+  width: 130px;
 }
 #search_bar input#keywords:focus, #search_bar input#keywords:hover {
   border: 1px solid #9c9c9c;
